--- a/index.html
+++ b/index.html
@@ -250,9 +250,9 @@
                     <div class="single_image">
                         <img src="images/w1.jpg" alt="">
                         <div class="image_overlay">
-                            <a href="">View Full Project</a>
+                            <!---a href="">View Full Project</a!--->
                             <h2>CRUNCH CINEMA</h2>
-                            <h4>Our system can predict movies' income through simulation.</h4>
+                            <!---h4>Our system can predict movies' income through simulation.</h4!--->
                         </div>
                     </div>
                 </div>
@@ -260,9 +260,9 @@
                     <div class="single_image">
                         <img src="images/w2.jpg" alt="">
                         <div class="image_overlay">
-                            <a href="">View Full Project</a>
+                            <!---a href="">View Full Project</a!--->
                             <h2>Result of Prediction</h2>
-                            <h4>Simulatin results of Zero Gravity and The Eternal Zero. PR and Viral effects can be evalauted through the system.</h4>
+                            <!---h4>Simulatin results of Zero Gravity and The Eternal Zero. PR and Viral effects can be evalauted through the system.</h4!--->
                         </div>                        
                     </div>
                 </div>
@@ -270,9 +270,9 @@
                     <div class="single_image">
                         <img src="images/w3.jpg" alt="">
                         <div class="image_overlay">
-                            <a href="">View Full Project</a>
+                            <!---a href="">View Full Project</a!--->
                             <h2>Presentation</h2>
-                            <h4>We gave a talk at Japan Content Showcase 2014</h4>
+                            <!---h4>We gave a talk at Japan Content Showcase 2014</h4!--->
                         </div>                        
                     </div>
                 </div>
@@ -424,15 +424,6 @@
         </div!--->
     </div>
 </footer>
-
-
-
-
-
-
-
-
-
 
 
 <!-- =========================
