--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 	                    <div class="col-md-12 text-center">
 	                        <div class="home_text wow fadeInUp animated">
 	                            <h2>CRUNCHERS Incorporation</h2>
-	                            <p>Integlation of Human Intelligence and Artificial Inteligence ... </p>
+	                            <p>Integlation of Human and Artificial Inteligence ... </p>
 	                        </div>
 	                    </div>
 	                </div>
@@ -154,10 +154,10 @@
                     </div>
                 </div>
                 <div class="col-md-4  wow fadeInRight animated">
-                    <p class="about_us_p">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Sed quia non numquam eius modi tempora.</p>
+                    <p class="about_us_p">我々のミッションは，これまで非現実的だと思われていたコンテンツマーケットに於けるone-to-oneマーケティングを大規模計算機とビッグデータを用いたシミュレーションモデルの反復計算とモデル再構築によって達成することです．全人口に於ける，共通の趣味・嗜好を保有する部分集団の割合とその行動パターンをクリエイターやマーケター，統計科学者といったチームで解析し，現象を再現し得るシミュレーションモデルを構築することにってコンピュータ内部に仮想市場を生成し，将来的に作成・配布されるコンテンツの収益予測，効率的なPR/広告手段、具体的なターゲットのペルソナを推定します．</p>
                 </div>
                 <div class="col-md-4  wow fadeInRight animated">
-                    <p class="about_us_p">Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem.</p>
+                    <p class="about_us_p">English ver. under translation.</p>
                 </div>
             </div>
         </div>
