--- a/index.html
+++ b/index.html
@@ -406,10 +406,10 @@
                         <h2>Follow Us on Here</h2>
                         <ul class="icon_list">
                             <li><a href="https://www.facebook.com/crunchersinc"target="_blank"><i class="fa fa-facebook"></i></a></li>
-                            <li><a href="http://www.twitter.com/absconderm"target="_blank"><i class="fa fa-twitter"></i></a></li>
-                            <li><a href=""><i class="fa fa-google-plus"></i></a></li>
+                            <li><a href="https://twitter.com/crunchers_info"target="_blank"><i class="fa fa-twitter"></i></a></li>
+                            <!---li><a href=""><i class="fa fa-google-plus"></i></a></li>
                             <li><a href=""><i class="fa fa-linkedin"></i></a></li>
-                            <li><a href="http://www.dribbble.com/abdullahnoman"target="_blank"><i class="fa fa-dribbble"></i></a></li>
+                            <li><a href="http://www.dribbble.com/abdullahnoman"target="_blank"><i class="fa fa-dribbble"></i></a></li!--->
                         </ul>
                     </div>
                 </div>
