--- a/index.html
+++ b/index.html
@@ -201,22 +201,22 @@
 	                            <div class="col-md-4">
 	                                <div class="single_count">
 	                                    <i class="icon-toolbox"></i>
-	                                    <h3>300</h3>
-	                                    <p>Project Undergone</p>
+	                                    <h3>100+</h3>
+	                                    <p>Analyzed Japanese Movies</p>
 	                                </div>
 	                            </div>
 	                            <div class="col-md-4">
 	                                <div class="single_count">
 	                                    <i class="icon-clock"></i>
-	                                    <h3>1700+</h3>
-	                                    <p>Hours Worked</p>
+	                                    <h3>200+</h3>
+	                                    <p>Analyzed USA Movies</p>
 	                                </div>                            
 	                            </div>
 	                            <div class="col-md-4">
 	                                <div class="single_count">
 	                                    <i class="icon-trophy"></i>
-	                                    <h3>37</h3>
-	                                    <p>Awards Won</p>
+	                                    <h3>5</h3>
+	                                    <p>Collaborative Companies</p>
 	                                </div>                            
 	                            </div>
 	                        </div>
